cmss/main/default/objects/NonLifeInsuranceBinding__c/NonLifeInsuranceBinding__c.object-meta.xml
<CustomObject>
    <label>Non Life Insurance Binding</label>
    <nameField>
        <label>Non Life Insurance Binding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Life Insurance Bindings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>