cmss/main/default/objects/NonLifeInsuranceBinding__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>NonLifeInsuranceBindings</relationshipName>
    <type>Lookup</type>
</CustomField>