cmss/main/default/objects/NonLifeInsuranceBinding__c/fields/BindingID__c.field-meta.xml
<CustomField>
    <fullName>BindingID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Binding ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>