cmss/main/default/objects/NonLifeInsuranceBinding__c/fields/CreditContractNumber__c.field-meta.xml
<CustomField>
    <fullName>CreditContractNumber__c</fullName>
    <label>Credit Contract Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>