cmss/main/default/objects/NonLifeInsuranceBinding__c/fields/HouseholdRestrictedAmount__c.field-meta.xml
<CustomField>
    <fullName>HouseholdRestrictedAmount__c</fullName>
    <label>Household Restricted Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>