cmss/main/default/objects/NonLifeInsuranceBinding__c/fields/HousholdRestrictedAmount__c.field-meta.xml
<CustomField>
    <fullName>HousholdRestrictedAmount__c</fullName>
    <label>Household Restricted Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>