cmss/main/default/objects/NonLifeInsuranceBinding__c/fields/HousholdRestrictedInBenefits__c.field-meta.xml
<CustomField>
    <fullName>HousholdRestrictedInBenefits__c</fullName>
    <label>Household Restricted In Benefits</label>
    <length>40</length>
    <type>Text</type>
</CustomField>