cmss/main/default/objects/NonLifeInsuranceBinding__c/fields/ObjectID__c.field-meta.xml
<CustomField>
    <fullName>ObjectID__c</fullName>
    <label>Object ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>